# myRenderer

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  premake5.lua
GEngine/: CMakeLists.txt  GEngine.h
GEngine/src/GEngine/: animator.cpp  animator.h  app.cpp  app.h  camera.cpp  camera.h  common.cpp  common.h  editor_ui.cpp  editor_ui.h  framebuffer.cpp  framebuffer.h  glfw_window.cpp  glfw_window.h  input_system.cpp  light.cpp  light.h  log.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  render_pass.cpp  render_pass.h  render_scene.cpp  render_system.cpp  render_system.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  singleton.h  texture.cpp  texture.h
GEngine/src/GEngine/renderpass/: IBL_pass.cpp  IBL_pass.h  atmosphere_shader_frag2.glsl  demo.glsl.inc  ibl_irradiance_frag.glsl  ibl_irradiance_vert.glsl  ibl_prefiltered_frag.glsl  ltc_demo_frag.glsl  ltc_demo_pass.cpp  ltc_demo_pass.h  ltc_demo_plane_frag.glsl  ltc_demo_plane_vert.glsl  ltc_demo_vert.glsl  ltc_matrix.h  precomputed_atmosphere_frag.glsl  precomputed_atmosphere_frag_bak.glsl  precomputed_atmosphere_pass.cpp  precomputed_atmosphere_pass.h  precomputed_atmosphere_vert.glsl  screen_shader_frag.glsl  screen_shader_vert.glsl  skybox_pass.cpp  skybox_pass.h  skybox_shader_frag.glsl  skybox_shader_vert.glsl
Sandbox/: CMakeLists.txt  sandbox.cpp
assets/model/SponzaPBR/: sponza_pbr.mtl
assets/model/sponza/: sponza.mtl
shaders/: PBR_MR_FS.glsl  PBR_MR_VS.glsl  frag.glsl  light_sphere_FS.glsl  light_sphere_VS.glsl  model_FS.glsl  model_VS.glsl  sponza_FS.glsl  sponza_PBR_FS.glsl  sponza_PBR_FS_debug.glsl  sponza_PBR_VS.glsl  sponza_VS.glsl  vert.glsl
src/: app.cpp  app.h  camera.cpp  camera.h  common.cpp  common.h  editor_ui.cpp  editor_ui.h  glfw_window.cpp  glfw_window.h  input_system.cpp  input_system.h  log.cpp  log.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  render_pass.cpp  render_pass.h  render_system.cpp  render_system.h  shader.cpp  shader.h  singleton.h  texture.cpp  texture.h
src/renderpass/: skybox_pass.cpp  skybox_pass.h  skybox_shader_vert.glsl
